# VLSI-CAD-h1

./: .gitignore  .gitmodules  CMakeLists.txt
benchmarks_updated/equivalence/max/: 1.cnf
benchmarks_updated/tautology/: .v5_c10.cube.swp
src/: CMakeLists.txt
src/equivalence/: CMakeLists.txt  equivalence.cpp
src/tautology/: .tautology.cpp.swp  CMakeLists.txt  tautology.cpp
src/tautology/src/: .Parser.cpp.swp  .Parser.h.swp  .Tautolopylib.cpp.swp  .Tautolopylib.h.swp  Parser.cpp  Parser.h  Tautolopylib.cpp  Tautolopylib.h
